added html challenge named index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ayeee</title>
+    <title>A Couple of Place Holders</title>
 </head>
 <body>
-    Got it!
+    <header> 
+        <h1>A Couple of Place Holders</h1>
+    </header>
+    <main>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse in volutpat sem, at faucibus dolor. Nulla pellentesque sapien in urna fermentum, eget iaculis nulla efficitur. Aenean mollis est quis enim tempor elementum. Praesent lectus neque, mollis eu semper eget, suscipit vel odio. Donec tellus libero, mattis sollicitudin mattis non, facilisis at ex. Nulla molestie sapien purus, mattis venenatis mauris aliquam in. Nunc sed mattis tellus. Nunc commodo, dui quis porta convallis, magna purus ultricies turpis, sed porttitor neque sapien at quam. Duis maximus, lorem at scelerisque interdum, lorem est pharetra nisl, sed fermentum magna risus fringilla dui.
+        </p>
+        <p>But <strong>what type</strong> of place holders might we encounter?</p>
+        <p><ol>
+            <li>Text (content) place holders like Lorem Ipsum</li>
+            <li>Image place holders</li>
+        </ol></p>
+        <hr>
+        <h2>A Bit About Lorem Ipsum</h2>
+        <p><em>Lorem ipsum</em> is a placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+        <p>There are variety of Lorem Ipsum generators, like <a href="https://lipsum.com" target="_blank">this one</a>. Or just google around.</p>
+        <hr>
+        <h2>What Do You Imagine?</h2>
+        <p>There also exist image place holder services that range from the mundane to the downright cute. The image below is from such a service:</p>
+        <img src="https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png">
+        <p><a href="https://google.com" target="_blank">This site</a> has a great list of resources, or just google your way to image place-holding fun. There are lots of fun topics:</p>
+        <p><ul>
+            <li>Bill Murray</li>
+            <li>Cats</li>
+            <li>Kittens</li>
+            <li>Puppies</li>
+            <li>Morgan Freeman</li>
+            <li>Bacon</li>
+            <li>Beards</li>
+        </ul></p>
+        <hr>
+        <h3> Challenge Instructions</h3>
+        <p><ol>
+            <li>Replicate this page using the html tags (elements) you have learned</li>
+            <li>Choose your own ipsum and replace the opening paragraph with your ipsum. Don't forget to link to the site you used in the anchor <a> tag </li>
+            <li>Choose your own image holder and replace the image with one from you chosen source.</li>
+        </ol></p>
+    </main>
+    <footer>
+        &copy; 2019 Alchemy Code Lab
+    </footer>
 </body>
 </html>
