added main.css and linked to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Couple of Place Holders</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header> 
@@ -15,7 +16,7 @@
         </p>
         <p>But <strong>what type</strong> of place holders might we encounter?</p>
         <p><ol>
-            <li>Text (content) place holders like Lorem Ipsum</li>
+            <li class="holder-type">Text (content) place holders like Lorem Ipsum</li>
             <li>Image place holders</li>
         </ol></p>
         <hr>
@@ -39,8 +40,8 @@
         <hr>
         <h3> Challenge Instructions</h3>
         <p><ol>
-            <li>Replicate this page using the html tags (elements) you have learned</li>
-            <li>Choose your own ipsum and replace the opening paragraph with your ipsum. Don't forget to link to the site you used in the anchor <a> tag </li>
+            <li class="holder-type">Replicate this page using the html tags (elements) you have learned</li>
+            <li>Choose your own ipsum and replace the opening paragraph with your ipsum. Don't forget to link to the site you used in the anchor tag </li>
             <li>Choose your own image holder and replace the image with one from you chosen source.</li>
         </ol></p>
     </main>
